--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,24 @@
 {
-    "js/ts.implicitProjectConfig.strictFunctionTypes": false
+    "js/ts.implicitProjectConfig.strictFunctionTypes": false,
+    "stock-for-vscode.stocks": [
+
+        {
+            "name": "500ETF",
+            "code": "SH510500",
+            "unit": 5.545,
+            "volume": 1500
+        },
+        {
+            "name": "300ETF",
+            "code": "SH510300",
+            "unit": 0,
+            "volume": 0
+        },
+        {
+            "name": "芯片ETF",
+            "code": "SH512760",
+            "unit": 2.319,
+            "volume": 7000
+        }
+    ]
 }
